--- a/index.html
+++ b/index.html
@@ -1,254 +1,249 @@
 <!doctype html>
 <html lang="hi">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Marathi Crime Files — News Portal</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background: #f6f6f6;
-      margin: 0; padding: 0;
-    }
-    header {
-      background: #b30000;
-      color: white;
-      text-align: center;
-      padding: 15px;
-      font-size: 22px;
-      position: sticky; top: 0;
-    }
-    #login-btn, #logout-btn {
-      background: white;
-      color: #b30000;
-      border: none;
-      padding: 8px 12px;
-      border-radius: 5px;
-      cursor: pointer;
-      font-weight: bold;
-      margin-left: 10px;
-    }
-    #admin-section {
-      display: none;
-      background: white;
-      padding: 15px;
-      margin: 20px auto;
-      max-width: 600px;
-      border-radius: 10px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
-    }
-    textarea, input[type="file"], input[type="text"] {
-      width: 100%;
-      margin: 8px 0;
-      padding: 10px;
-      border: 1px solid #ccc;
-      border-radius: 6px;
-    }
-    #news-list {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-      gap: 15px;
-      padding: 20px;
-    }
-    .news-card {
-      background: white;
-      border-radius: 10px;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-      overflow: hidden;
-      cursor: pointer;
-      transition: transform 0.2s;
-    }
-    .news-card:hover { transform: scale(1.02); }
-    .news-card img {
-      width: 100%;
-      height: 180px;
-      object-fit: cover;
-    }
-    .news-card h3 {
-      margin: 10px;
-      font-size: 18px;
-      color: #222;
-    }
-    #news-popup {
-      display: none;
-      position: fixed;
-      top: 0; left: 0; right: 0; bottom: 0;
-      background: rgba(0,0,0,0.6);
-      justify-content: center;
-      align-items: center;
-      z-index: 1000;
-    }
-    #popup-content {
-      background: white;
-      padding: 20px;
-      border-radius: 10px;
-      max-width: 650px;
-      max-height: 90%;
-      overflow-y: auto;
-    }
-    #popup-content img {
-      width: 100%;
-      margin: 8px 0;
-      border-radius: 6px;
-    }
-    #close-popup {
-      background: #b30000;
-      color: white;
-      border: none;
-      padding: 8px 14px;
-      border-radius: 5px;
-      cursor: pointer;
-      margin-top: 10px;
-    }
-  </style>
-</head>
-<body>
-  <header>
-    Marathi Crime Files
-    <button id="login-btn">Google Login</button>
-    <button id="logout-btn" style="display:none;">Logout</button>
-  </header>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Marathi Crime Files</title>
+<script src="https://cdn.tailwindcss.com"></script>
+<script type="module">
+import { initializeApp } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-app.js";
+import { getAuth, GoogleAuthProvider, signInWithPopup, signOut } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-auth.js";
+import { getFirestore, collection, addDoc, doc, deleteDoc, updateDoc, onSnapshot, query, orderBy, setDoc } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore.js";
 
-  <section id="admin-section">
-    <h2>📰 नई खबर डालें</h2>
-    <input type="text" id="news-title" placeholder="News Heading..." />
-    <textarea id="news-content" rows="6" placeholder="खबर लिखें... (जहां तस्वीर डालनी हो वहां [image1], [image2], [image3] लिखें)"></textarea>
-    <input type="file" id="news-images" multiple />
-    <button id="post-btn">Post News</button>
-  </section>
+// Firebase config
+const firebaseConfig = {
+  apiKey: "AIzaSyCLCUAiPz-sqhFDskG9g9AwyUI1RdTQWfk",
+  authDomain: "marathi-crime-files.firebaseapp.com",
+  projectId: "marathi-crime-files",
+  storageBucket: "marathi-crime-files.appspot.com",
+  messagingSenderId: "973325762370",
+  appId: "1:973325762370:web:4fb97306806bbe6cc0d2db",
+  measurementId: "G-1XQPKL3740"
+};
+const app = initializeApp(firebaseConfig);
+const auth = getAuth(app);
+const db = getFirestore(app);
+const ADMIN_EMAIL="gulistankh2011@gmail.com"; // Admin email
+const IMGBB_API_KEY="2387b6e1ec3474b6df29aaa462344077"; // IMGBB API key
 
-  <main id="news-list"></main>
+// DOM elements
+const loginBtn=document.getElementById("loginBtn");
+const logoutBtn=document.getElementById("logoutBtn");
+const editorArea=document.getElementById("editorArea");
+const noticeEditor=document.getElementById("noticeEditor");
+const postsArea=document.getElementById("postsArea");
+const blocksList=document.getElementById("blocksList");
+const aTitle=document.getElementById("aTitle");
+const aCat=document.getElementById("aCat");
+const noticeText=document.getElementById("noticeText");
+const headlineText=document.getElementById("headlineText");
+const modalBg=document.getElementById("modalBg");
+const modalClose=document.getElementById("modalClose");
+const modalContent=document.getElementById("modalContent");
+const zoomModal=document.getElementById("zoomModal");
+const zoomImg=document.getElementById("zoomImg");
 
-  <div id="news-popup">
-    <div id="popup-content">
-      <h2 id="popup-title"></h2>
-      <div id="popup-body"></div>
-      <button id="close-popup">Close</button>
-    </div>
-  </div>
+let editingId=null;
 
-  <script type="module">
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.13.2/firebase-app.js";
-    import { getAuth, GoogleAuthProvider, signInWithPopup, signOut, onAuthStateChanged } 
-      from "https://www.gstatic.com/firebasejs/10.13.2/firebase-auth.js";
-    import { getFirestore, collection, addDoc, getDocs, orderBy, query, serverTimestamp } 
-      from "https://www.gstatic.com/firebasejs/10.13.2/firebase-firestore.js";
-    import { getStorage, ref, uploadBytes, getDownloadURL } 
-      from "https://www.gstatic.com/firebasejs/10.13.2/firebase-storage.js";
+// Auth
+loginBtn.onclick = async()=>{await signInWithPopup(auth,new GoogleAuthProvider());}
+logoutBtn.onclick=()=>signOut(auth);
 
-    const firebaseConfig = {
-      apiKey: "AIzaSyCLCUAiPz-sqhFDskG9g9AwyUI1RdTQWfk",
-      authDomain: "marathi-crime-files.firebaseapp.com",
-      projectId: "marathi-crime-files",
-      storageBucket: "marathi-crime-files.appspot.com",
-      messagingSenderId: "973325762370",
-      appId: "1:973325762370:web:4fb97306806bbe6cc0d2db",
-      measurementId: "G-1XQPKL3740"
+auth.onAuthStateChanged(user=>{
+  if(user && user.email===ADMIN_EMAIL){
+    editorArea.classList.remove("hidden");
+    noticeEditor.classList.remove("hidden");
+    loginBtn.classList.add("hidden");
+    logoutBtn.classList.remove("hidden");
+  } else {
+    editorArea.classList.add("hidden");
+    noticeEditor.classList.add("hidden");
+    loginBtn.classList.remove("hidden");
+    logoutBtn.classList.add("hidden");
+  }
+});
+
+// IMGBB Upload
+async function uploadToImgBB(file){
+  const formData=new FormData();
+  formData.append("image",file);
+  const res=await fetch(`https://api.imgbb.com/1/upload?key=${IMGBB_API_KEY}`,{method:"POST",body:formData});
+  const data=await res.json();
+  return data.data.url;
+}
+
+// Add Text/Image blocks
+document.getElementById("addTextBtn").onclick=()=>{
+  const t=document.createElement("textarea"); 
+  t.placeholder="Write paragraph..."; 
+  t.dataset.type="text"; 
+  t.className="border p-2 w-full mb-2 rounded"; 
+  blocksList.appendChild(t);
+}
+document.getElementById("addImageBtn").onclick=()=>{
+  const inp=document.createElement("input"); 
+  inp.type="file"; 
+  inp.dataset.type="image"; 
+  inp.className="w-full mb-2"; 
+  blocksList.appendChild(inp);
+}
+
+// Publish/Update news
+document.getElementById("publishBtn").onclick=async()=>{
+  const title=aTitle.value.trim(), cat=aCat.value.trim();
+  if(!title) return alert("Enter title!");
+  const blocks=[];
+  for(const el of blocksList.children){
+    if(el.dataset.type=="text" && el.value.trim()) blocks.push({type:"text",text:el.value.trim()});
+    else if(el.type=="file" && el.files.length>0){
+      const url=await uploadToImgBB(el.files[0]);
+      if(url) blocks.push({type:"image",url});
+    }
+  }
+  if(blocks.length===0) return alert("Add content!");
+  if(editingId){
+    await updateDoc(doc(db,"news",editingId),{title,category:cat,blocks,time:Date.now()});
+    editingId=null;
+  } else {
+    await addDoc(collection(db,"news"),{title,category:cat,blocks,time:Date.now()});
+  }
+  aTitle.value=aCat.value=""; blocksList.innerHTML="";
+}
+
+// Admin Notice
+const noticeRef=doc(db,"settings","notice");
+document.getElementById("saveNoticeBtn").onclick=()=>setDoc(noticeRef,{text:document.getElementById("noticeInput").value.trim()});
+
+// Load news & notice
+onSnapshot(query(collection(db,"news"),orderBy("time","desc")),snap=>{
+  const posts=snap.docs.map(d=>({id:d.id,...d.data()}));
+  postsArea.innerHTML="";
+  posts.forEach(d=>{
+    const firstImg=d.blocks.find(b=>b.type=="image")?.url||"https://via.placeholder.com/300x150?text=No+Image";
+    const firstText=d.blocks.find(b=>b.type=="text")?.text.substring(0,80)+"..."||"";
+    const card=document.createElement("div");
+    card.className="card";
+    card.innerHTML=`<img src='${firstImg}' class='image-zoom'><div class='card-body'><h3>${d.title}</h3><p>${firstText}</p></div>`;
+    card.onclick=()=>showModal(d);
+    postsArea.appendChild(card);
+  });
+  headlineText.textContent=posts.slice(0,5).map(p=>p.title).join(" — ");
+});
+onSnapshot(noticeRef,snap=>{noticeText.textContent=snap.exists()?snap.data().text:""});
+
+// Show full news modal
+modalClose.onclick=()=>modalBg.style.display="none";
+modalBg.onclick=e=>{if(e.target===modalBg) modalBg.style.display="none";}
+function showModal(d){
+  modalContent.innerHTML=`<h2 class='text-lg font-bold mb-2'>${d.title}</h2>`;
+  d.blocks.forEach(b=>{
+    if(b.type=="text") modalContent.innerHTML+=`<p class='mb-2 text-gray-800'>${b.text}</p>`;
+    else modalContent.innerHTML+=`<img src='${b.url}' class='image-zoom mb-2'>`;
+  });
+  const user=auth.currentUser;
+  if(user && user.email===ADMIN_EMAIL){
+    const editBtn=document.createElement("button"); 
+    editBtn.textContent="Edit"; 
+    editBtn.className="bg-gray-200 px-3 py-1 rounded mr-2";
+    editBtn.onclick=()=>{
+      editingId=d.id; aTitle.value=d.title; aCat.value=d.category; blocksList.innerHTML="";
+      d.blocks.forEach(b=>{
+        if(b.type=="text"){
+          const t=document.createElement("textarea"); 
+          t.value=b.text; t.dataset.type="text"; t.className="border p-2 w-full mb-2 rounded"; 
+          blocksList.appendChild(t);
+        } else{
+          const inp=document.createElement("input"); inp.type="file"; inp.className="w-full mb-2"; blocksList.appendChild(inp);
+        }
+      });
+      modalBg.style.display="none";
     };
+    const delBtn=document.createElement("button"); 
+    delBtn.textContent="Delete"; 
+    delBtn.className="bg-red-500 text-white px-3 py-1 rounded";
+    delBtn.onclick=async()=>{if(confirm("Delete this post?")) await deleteDoc(doc(db,"news",d.id)); modalBg.style.display="none";}
+    modalContent.appendChild(editBtn); modalContent.appendChild(delBtn);
+  }
+  modalBg.style.display="flex";
+  modalContent.querySelectorAll("img.image-zoom").forEach(img=>{img.onclick=()=>{zoomImg.src=img.src; zoomModal.style.display="flex";}});
+}
+document.querySelector(".zoom-close").onclick=()=>zoomModal.style.display="none";
+zoomModal.onclick=e=>{if(e.target===zoomModal) zoomModal.style.display="none";}
 
-    const app = initializeApp(firebaseConfig);
-    const auth = getAuth(app);
-    const db = getFirestore(app);
-    const storage = getStorage(app);
-    const provider = new GoogleAuthProvider();
+</script>
 
-    const loginBtn = document.getElementById("login-btn");
-    const logoutBtn = document.getElementById("logout-btn");
-    const adminSection = document.getElementById("admin-section");
-    const postBtn = document.getElementById("post-btn");
-    const newsList = document.getElementById("news-list");
-    const popup = document.getElementById("news-popup");
-    const popupTitle = document.getElementById("popup-title");
-    const popupBody = document.getElementById("popup-body");
-    const closePopup = document.getElementById("close-popup");
+<style>
+body{margin:0;font-family:Arial,sans-serif;background:#f6f7fb;color:#0b2540;}
+header{display:flex;justify-content:space-between;align-items:center;padding:8px 12px;background:#1e40af;color:white;position:sticky;top:0;z-index:300;box-shadow:0 2px 5px rgba(0,0,0,0.2);}
+header img{height:50px;width:50px;border-radius:6px;margin-right:8px;object-fit:cover;}
+.header-buttons button{padding:6px 12px;margin-left:6px;border-radius:6px;font-weight:600;cursor:pointer;transition:transform 0.2s;}
+.header-buttons button:hover{transform:scale(1.05);}
+.notice-ticker,.headline-ticker{min-height:28px;overflow:hidden;white-space:nowrap;color:white;position:sticky;z-index:250;}
+.notice-ticker{background:#dc2626;padding:6px;top:56px;}
+.headline-ticker{background:#1e40af;padding:6px;top:88px;}
+.ticker-text{display:inline-block;padding-right:50px;animation:scroll 20s linear infinite;}
+@keyframes scroll{0%{transform:translateX(100%);}100%{transform:translateX(-100%);}}
+.posts-grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(250px,1fr));gap:12px;padding:8px;margin-top:116px;}
+.card{background:#fff;border-radius:10px;overflow:hidden;box-shadow:0 6px 20px rgba(2,6,23,0.06);cursor:pointer;transition:transform 0.2s;position:relative;}
+.card:hover{transform:scale(1.02);}
+.card img{width:100%;height:150px;object-fit:cover;cursor:zoom-in;transition:transform 0.3s;}
+.card-body{padding:8px;}
+.card-body h3{font-weight:700;font-size:18px;margin-bottom:4px;}
+.card-body p{font-size:14px;color:#555;margin-bottom:6px;}
+.editor{padding:12px;background:#fff;margin:6px;border-radius:8px;box-shadow:0 2px 5px rgba(0,0,0,0.1);}
+.editor input,.editor textarea{border:1px solid #ccc;border-radius:6px;padding:6px;margin-bottom:6px;width:100%;}
+.editor button{padding:6px 12px;margin-right:6px;border-radius:6px;background:#1e40af;color:white;cursor:pointer;}
+.modal-bg{display:none;position:fixed;inset:0;background:rgba(0,0,0,0.6);justify-content:center;align-items:center;z-index:400;overflow:hidden;}
+.modal{background:#fff;border-radius:10px;max-width:650px;width:90%;max-height:85%;overflow-y:auto;padding:16px;position:relative;}
+.modal img{max-width:100%;border-radius:10px;margin-bottom:6px;}
+.modal-close{position:absolute;top:10px;right:15px;background:#fff;border:none;border-radius:50%;padding:5px 10px;cursor:pointer;font-weight:bold;}
+.zoom-modal{display:none;position:fixed;inset:0;background:rgba(0,0,0,0.85);justify-content:center;align-items:center;z-index:9999;}
+.zoom-modal img{max-width:90%;max-height:90%;border-radius:10px;box-shadow:0 0 25px rgba(255,255,255,0.3);}
+.zoom-close{position:absolute;top:20px;right:30px;background:#fff;border:none;border-radius:50%;font-size:20px;padding:5px 10px;cursor:pointer;}
+</style>
 
-    // 🔹 Login
-    loginBtn.addEventListener("click", async () => {
-      try { await signInWithPopup(auth, provider); } 
-      catch (e) { alert(e.message); }
-    });
+<header>
+  <div class="flex items-center">
+    <img src="https://i.postimg.cc/vTb8F94w/vasalive-png.jpg" alt="Logo">
+    <h1 class="font-bold text-xl">Marathi Crime Files</h1>
+  </div>
+  <div class="header-buttons">
+    <button id="loginBtn" class="bg-green-500 text-white">Login</button>
+    <button id="logoutBtn" class="hidden bg-red-600 text-white">Logout</button>
+  </div>
+</header>
 
-    // 🔹 Logout
-    logoutBtn.addEventListener("click", () => signOut(auth));
+<div class="notice-ticker"><span class="ticker-text" id="noticeText"></span></div>
+<div class="headline-ticker"><span class="ticker-text" id="headlineText"></span></div>
 
-    // 🔹 Auth Listener
-    onAuthStateChanged(auth, (user) => {
-      if (user) {
-        loginBtn.style.display = "none";
-        logoutBtn.style.display = "inline";
-        adminSection.style.display = "block";
-      } else {
-        loginBtn.style.display = "inline";
-        logoutBtn.style.display = "none";
-        adminSection.style.display = "none";
-      }
-    });
+<section id="noticeEditor" class="editor hidden">
+  <h2>📰 Admin Notice</h2>
+  <input id="noticeInput" placeholder="Enter notice text...">
+  <button id="saveNoticeBtn">Save</button>
+</section>
 
-    // 🔹 Post News
-    postBtn.addEventListener("click", async () => {
-      const title = document.getElementById("news-title").value.trim();
-      const content = document.getElementById("news-content").value.trim();
-      const files = document.getElementById("news-images").files;
+<section id="editorArea" class="editor hidden">
+  <h2>🖋️ Admin: Create/Edit News</h2>
+  <input id="aTitle" placeholder="Title">
+  <input id="aCat" placeholder="Category">
+  <div id="blocksList"></div>
+  <button id="addTextBtn">Add Text</button>
+  <button id="addImageBtn">Add Image</button>
+  <button id="publishBtn">Publish</button>
+</section>
 
-      if (!title || !content) return alert("कृपया Title और Content दोनों लिखें।");
+<section class="posts-grid" id="postsArea"></section>
 
-      const imgURLs = [];
-      for (let file of files) {
-        const fileRef = ref(storage, "news/" + Date.now() + "_" + file.name);
-        await uploadBytes(fileRef, file);
-        const url = await getDownloadURL(fileRef);
-        imgURLs.push(url);
-      }
+<div id="modalBg" class="modal-bg">
+  <div class="modal">
+    <button id="modalClose" class="modal-close">X</button>
+    <div id="modalContent"></div>
+  </div>
+</div>
 
-      await addDoc(collection(db, "news"), {
-        title,
-        content,
-        images: imgURLs,
-        timestamp: serverTimestamp()
-      });
+<div id="zoomModal" class="zoom-modal">
+  <button class="zoom-close">X</button>
+  <img id="zoomImg">
+</div>
 
-      alert("✅ News Successfully Posted!");
-      location.reload();
-    });
-
-    // 🔹 Load News
-    async function loadNews() {
-      const q = query(collection(db, "news"), orderBy("timestamp", "desc"));
-      const snap = await getDocs(q);
-      newsList.innerHTML = "";
-      snap.forEach(doc => {
-        const data = doc.data();
-        const card = document.createElement("div");
-        card.className = "news-card";
-        const image = data.images?.[0] || "https://via.placeholder.com/400x200?text=News";
-        card.innerHTML = `<img src="${image}"><h3>${data.title}</h3>`;
-        card.onclick = () => showPopup(data);
-        newsList.appendChild(card);
-      });
-    }
-
-    function showPopup(data) {
-      popup.style.display = "flex";
-      popupTitle.innerText = data.title;
-      let html = data.content;
-
-      if (data.images?.length) {
-        data.images.forEach((img, i) => {
-          html = html.replaceAll(`[image${i + 1}]`, `<img src="${img}">`);
-        });
-      }
-
-      // अगर कोई marker नहीं मिला तो आखिरी में सब image दिखा दो
-      if (!/\[image\d+\]/.test(data.content) && data.images?.length) {
-        data.images.forEach(img => { html += `<img src="${img}">`; });
-      }
-
-      popupBody.innerHTML = html.replace(/\n/g, "<br>");
-    }
-
-    closePopup.onclick = () => (popup.style.display = "none");
-
-    loadNews();
-  </script>
-</body>
 </html>
