--- a/index.html
+++ b/index.html
@@ -3,14 +3,13 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Marathi Crime Files</title>
+<title>Vasai Live News</title>
 <script src="https://cdn.tailwindcss.com"></script>
 <script type="module">
 import { initializeApp } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-app.js";
 import { getAuth, GoogleAuthProvider, signInWithPopup, signOut } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-auth.js";
 import { getFirestore, collection, addDoc, doc, deleteDoc, updateDoc, onSnapshot, query, orderBy, setDoc } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore.js";
 
-// Firebase config
 const firebaseConfig = {
   apiKey: "AIzaSyCLCUAiPz-sqhFDskG9g9AwyUI1RdTQWfk",
   authDomain: "marathi-crime-files.firebaseapp.com",
@@ -20,13 +19,115 @@ const firebaseConfig = {
   appId: "1:973325762370:web:4fb97306806bbe6cc0d2db",
   measurementId: "G-1XQPKL3740"
 };
+
+const app = initializeApp(firebaseConfig);
+const auth = getAuth(app);
+const db = getFirestore(app);
+const ADMIN_EMAIL="gulistankh2011@gmail.com";
+const IMGBB_API_KEY="2387b6e1ec3474b6df29aaa462344077";
+</script>
+<style>
+body{margin:0;font-family:Arial,sans-serif;background:#f6f7fb;color:#0b2540;}
+header{display:flex;justify-content:space-between;align-items:center;padding:8px 12px;background:#1e40af;color:white;position:sticky;top:0;z-index:300;box-shadow:0 2px 5px rgba(0,0,0,0.2);}
+header img{height:50px;width:50px;border-radius:6px;margin-right:8px;object-fit:cover;}
+.header-buttons button{padding:6px 12px;margin-left:6px;border-radius:6px;font-weight:600;cursor:pointer;transition:transform 0.2s;}
+.header-buttons button:hover{transform:scale(1.05);}
+.notice-ticker,.headline-ticker{min-height:28px;overflow:hidden;white-space:nowrap;color:white;position:sticky;z-index:250;}
+.notice-ticker{background:#dc2626;padding:6px;top:56px;}
+.headline-ticker{background:#1e40af;padding:6px;top:88px;}
+.ticker-text{display:inline-block;padding-right:50px;animation:scroll 20s linear infinite;}
+@keyframes scroll{0%{transform:translateX(100%);}100%{transform:translateX(-100%);}}
+.posts-grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(250px,1fr));gap:12px;padding:8px;margin-top:116px;}
+@media(min-width:1024px){.posts-grid{grid-template-columns:repeat(4,1fr);}}
+@media(max-width:768px){.posts-grid{grid-template-columns:repeat(1,1fr);}}
+.card{background:#fff;border-radius:10px;overflow:hidden;box-shadow:0 6px 20px rgba(2,6,23,0.06);cursor:pointer;transition:transform 0.2s;position:relative;}
+.card:hover{transform:scale(1.02);}
+.card img{width:100%;height:auto;object-fit:contain;cursor:zoom-in;transition:transform 0.3s;border-bottom:1px solid #ddd;}
+.card-body{padding:8px;}
+.card-body h3{font-weight:700;font-size:18px;margin-bottom:4px;}
+.card-body p{font-size:14px;color:#555;margin-bottom:6px;}
+.modal-bg{display:none;position:fixed;inset:0;background:rgba(0,0,0,0.6);justify-content:center;align-items:center;z-index:400;overflow:auto;}
+.modal{background:#fff;border-radius:10px;max-width:700px;width:90%;max-height:90%;overflow-y:auto;padding:16px;position:relative;}
+.modal img{max-width:100%;border-radius:10px;margin-bottom:6px;}
+.modal-close{position:absolute;top:10px;right:15px;background:#fff;border:none;border-radius:50%;padding:5px 10px;cursor:pointer;font-weight:bold;}
+.editor{padding:12px;background:#fff;margin:6px;border-radius:8px;box-shadow:0 2px 5px rgba(0,0,0,0.1);}
+.editor input,.editor textarea{border:1px solid #ccc;border-radius:6px;padding:6px;margin-bottom:6px;width:100%;}
+.editor button{padding:6px 12px;margin-right:6px;border-radius:6px;background:#1e40af;color:white;cursor:pointer;}
+.image-zoom:hover{transform:scale(1.05);}
+.zoom-modal{display:none;position:fixed;inset:0;background:rgba(0,0,0,0.85);justify-content:center;align-items:center;z-index:9999;}
+.zoom-modal img{max-width:90%;max-height:90%;border-radius:10px;box-shadow:0 0 25px rgba(255,255,255,0.3);}
+.zoom-close{position:absolute;top:20px;right:30px;background:#fff;border:none;border-radius:50%;font-size:20px;padding:5px 10px;cursor:pointer;}
+</style>
+</head>
+<body>
+
+<header>
+  <div class="flex items-center">
+    <img src="https://i.postimg.cc/vTb8F94w/vasalive-png.jpg" alt="Logo">
+    <h1 class="font-bold text-xl">Vasai Live News</h1>
+  </div>
+  <div class="header-buttons">
+    <button id="loginBtn" class="bg-green-500 text-white">Login</button>
+    <button id="logoutBtn" class="hidden bg-red-600 text-white">Logout</button>
+  </div>
+</header>
+
+<div class="notice-ticker"><span class="ticker-text" id="noticeText"></span></div>
+<div class="headline-ticker"><span class="ticker-text" id="headlineText"></span></div>
+
+<section id="noticeEditor" class="editor hidden">
+  <h2>📰 Admin Notice</h2>
+  <input id="noticeInput" placeholder="Enter notice text...">
+  <button id="saveNoticeBtn">Save</button>
+  <button id="deleteNoticeBtn" class="bg-red-500 text-white">Delete</button>
+</section>
+
+<section id="editorArea" class="editor hidden">
+  <h2>🖋️ Admin: Create/Edit News</h2>
+  <input id="aTitle" placeholder="Title">
+  <input id="aCat" placeholder="Category">
+  <div id="blocksList"></div>
+  <button id="addTextBtn">Add Text</button>
+  <button id="addImageBtn">Add Image (Max 5)</button>
+  <button id="publishBtn">Publish</button>
+</section>
+
+<section class="posts-grid" id="postsArea"></section>
+
+<div id="modalBg" class="modal-bg">
+  <div class="modal">
+    <button id="modalClose" class="modal-close">X</button>
+    <div id="modalContent"></div>
+  </div>
+</div>
+
+<div id="zoomModal" class="zoom-modal">
+  <button class="zoom-close">X</button>
+  <img id="zoomImg">
+</div>
+
+<script type="module">
+import { initializeApp } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-app.js";
+import { getAuth, GoogleAuthProvider, signInWithPopup, signOut } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-auth.js";
+import { getFirestore, collection, addDoc, doc, deleteDoc, updateDoc, onSnapshot, query, orderBy, setDoc } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore.js";
+
+const firebaseConfig = {
+  apiKey: "AIzaSyCLCUAiPz-sqhFDskG9g9AwyUI1RdTQWfk",
+  authDomain: "marathi-crime-files.firebaseapp.com",
+  projectId: "marathi-crime-files",
+  storageBucket: "marathi-crime-files.appspot.com",
+  messagingSenderId: "973325762370",
+  appId: "1:973325762370:web:4fb97306806bbe6cc0d2db",
+  measurementId: "G-1XQPKL3740"
+};
+
 const app = initializeApp(firebaseConfig);
 const auth = getAuth(app);
 const db = getFirestore(app);
 const ADMIN_EMAIL="gulistankh2011@gmail.com";
 const IMGBB_API_KEY="2387b6e1ec3474b6df29aaa462344077";
 
-// DOM elements
+// DOM
 const loginBtn=document.getElementById("loginBtn");
 const logoutBtn=document.getElementById("logoutBtn");
 const editorArea=document.getElementById("editorArea");
@@ -48,7 +149,6 @@ let editingId=null;
 // Auth
 loginBtn.onclick = async()=>{await signInWithPopup(auth,new GoogleAuthProvider());}
 logoutBtn.onclick=()=>signOut(auth);
-
 auth.onAuthStateChanged(user=>{
   if(user && user.email===ADMIN_EMAIL){
     editorArea.classList.remove("hidden");
@@ -72,23 +172,16 @@ async function uploadToImgBB(file){
   return data.data.url;
 }
 
-// Add Text/Image blocks
+// Add Text/Image
 document.getElementById("addTextBtn").onclick=()=>{
-  const t=document.createElement("textarea"); 
-  t.placeholder="Write paragraph..."; 
-  t.dataset.type="text"; 
-  t.className="border p-2 w-full mb-2 rounded"; 
-  blocksList.appendChild(t);
+  const t=document.createElement("textarea"); t.placeholder="Write paragraph..."; t.dataset.type="text"; t.className="border p-2 w-full mb-2 rounded"; blocksList.appendChild(t);
 }
 document.getElementById("addImageBtn").onclick=()=>{
-  const inp=document.createElement("input"); 
-  inp.type="file"; 
-  inp.dataset.type="image"; 
-  inp.className="w-full mb-2"; 
-  blocksList.appendChild(inp);
+  if(blocksList.querySelectorAll('input[type="file"]').length>=5){alert("Max 5 images allowed"); return;}
+  const inp=document.createElement("input"); inp.type="file"; inp.dataset.type="image"; inp.className="w-full mb-2"; blocksList.appendChild(inp);
 }
 
-// Publish/Update news
+// Publish/Update
 document.getElementById("publishBtn").onclick=async()=>{
   const title=aTitle.value.trim(), cat=aCat.value.trim();
   if(!title) return alert("Enter title!");
@@ -102,20 +195,21 @@ document.getElementById("publishBtn").onclick=async()=>{
   }
   if(blocks.length===0) return alert("Add content!");
   if(editingId){
-    await updateDoc(doc(db,"news",editingId),{title,category:cat,blocks,time:Date.now()});
+    await updateDoc(doc(db,"vasai_news",editingId),{title,category:cat,blocks,time:Date.now()});
     editingId=null;
   } else {
-    await addDoc(collection(db,"news"),{title,category:cat,blocks,time:Date.now()});
+    await addDoc(collection(db,"vasai_news"),{title,category:cat,blocks,time:Date.now()});
   }
   aTitle.value=aCat.value=""; blocksList.innerHTML="";
 }
 
-// Admin Notice
+// Notice
 const noticeRef=doc(db,"settings","notice");
 document.getElementById("saveNoticeBtn").onclick=()=>setDoc(noticeRef,{text:document.getElementById("noticeInput").value.trim()});
+document.getElementById("deleteNoticeBtn").onclick=()=>setDoc(noticeRef,{text:""});
 
-// Load news & notice
-onSnapshot(query(collection(db,"news"),orderBy("time","desc")),snap=>{
+// Load posts & notice
+onSnapshot(query(collection(db,"vasai_news"),orderBy("time","desc")),snap=>{
   const posts=snap.docs.map(d=>({id:d.id,...d.data()}));
   postsArea.innerHTML="";
   posts.forEach(d=>{
@@ -131,7 +225,7 @@ onSnapshot(query(collection(db,"news"),orderBy("time","desc")),snap=>{
 });
 onSnapshot(noticeRef,snap=>{noticeText.textContent=snap.exists()?snap.data().text:""});
 
-// Show full news modal
+// Modal
 modalClose.onclick=()=>modalBg.style.display="none";
 modalBg.onclick=e=>{if(e.target===modalBg) modalBg.style.display="none";}
 function showModal(d){
@@ -142,113 +236,28 @@ function showModal(d){
   });
   const user=auth.currentUser;
   if(user && user.email===ADMIN_EMAIL){
-    const editBtn=document.createElement("button"); 
-    editBtn.textContent="Edit"; 
-    editBtn.className="bg-gray-200 px-3 py-1 rounded mr-2";
+    const editBtn=document.createElement("button"); editBtn.textContent="Edit"; editBtn.className="bg-gray-200 px-3 py-1 rounded mr-2";
     editBtn.onclick=()=>{
       editingId=d.id; aTitle.value=d.title; aCat.value=d.category; blocksList.innerHTML="";
       d.blocks.forEach(b=>{
         if(b.type=="text"){
-          const t=document.createElement("textarea"); 
-          t.value=b.text; t.dataset.type="text"; t.className="border p-2 w-full mb-2 rounded"; 
-          blocksList.appendChild(t);
-        } else{
+          const t=document.createElement("textarea"); t.value=b.text; t.dataset.type="text"; t.className="border p-2 w-full mb-2 rounded"; blocksList.appendChild(t);
+        } else {
           const inp=document.createElement("input"); inp.type="file"; inp.className="w-full mb-2"; blocksList.appendChild(inp);
         }
       });
       modalBg.style.display="none";
     };
-    const delBtn=document.createElement("button"); 
-    delBtn.textContent="Delete"; 
-    delBtn.className="bg-red-500 text-white px-3 py-1 rounded";
-    delBtn.onclick=async()=>{if(confirm("Delete this post?")) await deleteDoc(doc(db,"news",d.id)); modalBg.style.display="none";}
+    const delBtn=document.createElement("button"); delBtn.textContent="Delete"; delBtn.className="bg-red-500 text-white px-3 py-1 rounded";
+    delBtn.onclick=async()=>{if(confirm("Delete this post?")) await deleteDoc(doc(db,"vasai_news",d.id)); modalBg.style.display="none";}
     modalContent.appendChild(editBtn); modalContent.appendChild(delBtn);
   }
   modalBg.style.display="flex";
   modalContent.querySelectorAll("img.image-zoom").forEach(img=>{img.onclick=()=>{zoomImg.src=img.src; zoomModal.style.display="flex";}});
 }
+
 document.querySelector(".zoom-close").onclick=()=>zoomModal.style.display="none";
 zoomModal.onclick=e=>{if(e.target===zoomModal) zoomModal.style.display="none";}
-
 </script>
-
-<style>
-body{margin:0;font-family:Arial,sans-serif;background:#f6f7fb;color:#0b2540;}
-header{display:flex;justify-content:space-between;align-items:center;padding:8px 12px;background:#1e40af;color:white;position:sticky;top:0;z-index:300;box-shadow:0 2px 5px rgba(0,0,0,0.2);}
-header img{height:50px;width:50px;border-radius:6px;margin-right:8px;object-fit:cover;}
-.header-buttons button{padding:6px 12px;margin-left:6px;border-radius:6px;font-weight:600;cursor:pointer;transition:transform 0.2s;}
-.header-buttons button:hover{transform:scale(1.05);}
-.notice-ticker,.headline-ticker{min-height:28px;overflow:hidden;white-space:nowrap;color:white;position:sticky;z-index:250;}
-.notice-ticker{background:#dc2626;padding:6px;top:56px;}
-.headline-ticker{background:#1e40af;padding:6px;top:88px;}
-.ticker-text{display:inline-block;padding-right:50px;animation:scroll 20s linear infinite;}
-@keyframes scroll{0%{transform:translateX(100%);}100%{transform:translateX(-100%);}}
-
-.posts-grid{display:grid;gap:12px;padding:8px;margin-top:116px;
-  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-}
-@media(min-width:1024px){ /* PC/Large screens */
-  .posts-grid{grid-template-columns: repeat(4, 1fr);}
-}
-
-.card{background:#fff;border-radius:10px;overflow:hidden;box-shadow:0 6px 20px rgba(2,6,23,0.06);cursor:pointer;transition:transform 0.2s;position:relative;}
-.card:hover{transform:scale(1.02);}
-.card img{width:100%;height:150px;object-fit:cover;cursor:zoom-in;transition:transform 0.3s;}
-.card-body{padding:8px;}
-.card-body h3{font-weight:700;font-size:18px;margin-bottom:4px;}
-.card-body p{font-size:14px;color:#555;margin-bottom:6px;}
-.editor{padding:12px;background:#fff;margin:6px;border-radius:8px;box-shadow:0 2px 5px rgba(0,0,0,0.1);}
-.editor input,.editor textarea{border:1px solid #ccc;border-radius:6px;padding:6px;margin-bottom:6px;width:100%;}
-.editor button{padding:6px 12px;margin-right:6px;border-radius:6px;background:#1e40af;color:white;cursor:pointer;}
-.modal-bg{display:none;position:fixed;inset:0;background:rgba(0,0,0,0.6);justify-content:center;align-items:center;z-index:400;overflow:hidden;}
-.modal{background:#fff;border-radius:10px;max-width:650px;width:90%;max-height:85%;overflow-y:auto;padding:16px;position:relative;}
-.modal img{max-width:100%;border-radius:10px;margin-bottom:6px;}
-.modal-close{position:absolute;top:10px;right:15px;background:#fff;border:none;border-radius:50%;padding:5px 10px;cursor:pointer;font-weight:bold;}
-.zoom-modal{display:none;position:fixed;inset:0;background:rgba(0,0,0,0.85);justify-content:center;align-items:center;z-index:9999;}
-.zoom-modal img{max-width:90%;max-height:90%;border-radius:10px;box-shadow:0 0 25px rgba(255,255,255,0.3);}
-.zoom-close{position:absolute;top:20px;right:30px;background:#fff;border:none;border-radius:50%;font-size:20px;padding:5px 10px;cursor:pointer;}
-</style>
-
-<header>
-  <div class="flex items-center">
-    <img src="https://i.postimg.cc/vTb8F94w/vasalive-png.jpg" alt="Logo">
-    <h1 class="font-bold text-xl">Marathi Crime Files</h1>
-  </div>
-  <div class="header-buttons">
-    <button id="loginBtn" class="bg-green-500 text-white">Login</button>
-    <button id="logoutBtn" class="hidden bg-red-600 text-white">Logout</button>
-  </div>
-</header>
-
-<div class="notice-ticker"><span class="ticker-text" id="noticeText"></span></div>
-<div class="headline-ticker"><span class="ticker-text" id="headlineText"></span></div>
-
-<section id="noticeEditor" class="editor hidden">
-  <h2>📰 Admin Notice</h2>
-  <input id="noticeInput" placeholder="Enter notice text...">
-  <button id="saveNoticeBtn">Save</button>
-</section>
-
-<section id="editorArea" class="editor hidden">
-  <h2>🖋️ Admin: Create/Edit News</h2>
-  <input id="aTitle" placeholder="Title">
-  <input id="aCat" placeholder="Category">
-  <div id="blocksList"></div>
-  <button id="addTextBtn">Add Text</button>
-  <button id="addImageBtn">Add Image</button>
-  <button id="publishBtn">Publish</button>
-</section>
-
-<section class="posts-grid" id="postsArea"></section>
-
-<div id="modalBg" class="modal-bg">
-  <div class="modal">
-    <button id="modalClose" class="modal-close">X</button>
-    <div id="modalContent"></div>
-  </div>
-</div>
-
-<div id="zoomModal" class="zoom-modal">
-  <button class="zoom-close">X</button>
-  <img id="zoomImg">
-</div>
+</body>
+</html>
